--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,52 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button ></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Tab 3
+      My Cart ({{ cart.count || 0}})
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ng-container *ngIf="cart.productData.length > 0; else showOther">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Tab 3</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <app-cart-view [prod]="cart.productData"></app-cart-view>
+  </ng-container>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ng-template #showOther>
+    <ion-img src="/assets/images/empty-cart.png"></ion-img>
+    <div class="d-flex ion-justify-content-center">
+      <ion-button class="ion-text-center" routerLink="/tabs/tab1">Go To Shop</ion-button>
+    </div>
+  </ng-template>
+
 </ion-content>
+
+  <ion-footer>
+    <ion-toolbar *ngIf="cart.productData.length > 0">
+      <ion-label slot="start">
+        <ion-text class="totalPrice" >{{ total |currency:"INR"}}<ion-note>({{ cart.count }})</ion-note></ion-text>
+      </ion-label>
+      <ion-buttons>
+        <ion-button
+        class="ion-activatable ripple-parient"
+        color="warning"
+        expand="full"
+        fill="solid"
+        size="large"
+        routerLink="/checkout"
+    >
+        GO To Checkout
+      <ion-ripple-effect type="unbounded"></ion-ripple-effect>
+  </ion-button>
+      </ion-buttons>
+
+    </ion-toolbar>
+  </ion-footer>
+
