--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -1,4 +1,6 @@
 <ion-content>
   <ion-img [src]="img || '../../../assets/images/loading.gif'"  class="welcome"></ion-img>
-  <ion-button class="button button-block button-positive"  color="primary"  routerLink="/register">Iniciar</ion-button>
+  <ion-button class="button button-block button-positive"  color="primary"  routerLink="/register">Registrate</ion-button>
+  <ion-button class="button button-block button-positive"  color="dark"  routerLink="/login">Inicia Sesion</ion-button>
+  <ion-button class="button button-block button-positive"  color="primary"  routerLink="/tabs/tab1">Ingresar como invitado</ion-button>
 </ion-content>
