--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
     <ion-list>
       <ion-menu-toggle>
         <ion-item>
-            <ion-icon name="person-circle-outline" routerLink="/tabs/tab2"></ion-icon> &nbsp; Mi Cuenta
+            <ion-icon name="person-circle-outline"></ion-icon> &nbsp;<a href="https://myjungle.ec/my-account/">Mi Cuenta </a>
       </ion-item>
         <ion-item (click)="logout()">
           <ion-icon name="log-out-outline"></ion-icon> &nbsp; Cerrar Sesion
@@ -25,9 +25,9 @@
       <ion-label>Tienda</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="tab2"  onclick="window.open('https://myjungle.ec/my-account/','_self', 'location=yes'); return false">
       <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Mi Cuenta</ion-label>
+    <ion-label> Mi Cuenta</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
@@ -35,5 +35,4 @@
       <ion-label>Carrito</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
