--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -41,6 +41,10 @@
                 <ion-label position="floating">Apellido</ion-label>
                 <ion-input #lname="ngModel" name="last_name" ngModel required type="text"></ion-input>
               </ion-item>
+              <ion-item>
+                <ion-label position="floating">Cedula</ion-label>
+                <ion-input #phone="ngModel" name="cedula" ngModel required type="text"></ion-input>
+              </ion-item>
 
               <ion-item>
                 <ion-label position="floating">Email</ion-label>
@@ -96,7 +100,7 @@
 
 
               <ion-label position="stacked">CODIGO POSTAL</ion-label>
-              <ion-input #b_postcode="ngModel" name="b_postcode" ngModel required
+              <ion-input #b_postcode="ngModel" name="b_postcode" ngModel
                          type="text"></ion-input>
             </ion-item>
 
