--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,7 +36,12 @@
                   type="submit"
                   [disabled]="loginForm.invalid || loginForm.pending">Iniciar Sesion</ion-button>
               </div>
+              <p>¿Aun no estas registrado? <a position="floating" routerLink="/register">REGISTRATE AQUI </a></p>
       </form><!-- /form -->
+
+
+
+
 
     </div><!-- /card-container -->
 </ion-content>
