--- a/src/app/pages/thankyou/thankyou.page.html
+++ b/src/app/pages/thankyou/thankyou.page.html
@@ -24,7 +24,7 @@
     </ion-row>
     <ion-row>
       <ion-col class="d-flex justify-content-center">
-        <ion-button routerLink="/" color="primary" fill="solid" expand="full" size="large">Ir A Inicio</ion-button>
+        <ion-button routerLink="/tabs/tab1" color="primary" fill="solid" expand="full" size="large">Ir A Inicio</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
