--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <ion-app>
+  <div id="Divuperpuesto" [style.display]="splash ?'flex': 'none'">
+    <div id="divSplash" color="primary">
+      <img  color="primary" src="../assets/images/loading.gif" alt="">
+    </div>
+  </div>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
