--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,10 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+#divSplash{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 250px;
+}
