--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,25 +1,28 @@
 <ion-menu slide="start" menuId="first" contentId="main">
   <ion-header>
     <ion-toolbar color="primary">
-      <ion-title>MENU</ion-title>
+      <ion-title>Menu Principal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
     <ion-list>
       <ion-menu-toggle>
-        <ion-item>
-            <ion-icon name="person-circle-outline"></ion-icon> &nbsp;<a href="https://myjungle.ec/my-account/">Mi Cuenta </a>
-      </ion-item>
-        <ion-item (click)="logout()">
+        <ion-item  onclick="window.open('https://myjungle.ec/my-account/','_self', 'location=yes'); return false">
+          <ion-icon name="person-circle-outline"></ion-icon> &nbsp; Mi Cuenta
+        </ion-item>
+        <ion-item  (click)="logout()">
           <ion-icon name="log-out-outline"></ion-icon> &nbsp; Cerrar Sesion
         </ion-item>
+
+
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
 </ion-menu>
+
 <ion-router-outlet id="main"></ion-router-outlet>
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
+<ion-tabs class="tabs">
+  <ion-tab-bar slot="bottom" >
     <ion-tab-button tab="tab1" routerLink="/tabs/tab1">
       <ion-icon name="pricetag-outline"></ion-icon>
       <ion-label>Tienda</ion-label>
@@ -31,8 +34,10 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="cart"></ion-icon>
+      <ion-icon name="cart-outline"></ion-icon>
       <ion-label>Carrito</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
+
+
